Fix spacing and shrinking in ordinal/title of location cards (#262)
TEST=manual
J=SLAP-516, SLAP-517

Locally test using the location-standard and professional-location cards with an ordinal and a large title. See distance not wrap, space between the title and distance, and ordinal not shrink.

--- a/static/scss/answers/cards/location-standard.scss
+++ b/static/scss/answers/cards/location-standard.scss
@@ -18,6 +18,7 @@ $location-standard-ordinal-dimensions: calc(var(--hh-location-standard-base-spac
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
     border-radius: 50%;
     margin-top: calc(var(--hh-location-standard-base-spacing) * 1/4);
     margin-right: calc(var(--hh-location-standard-base-spacing) * 3/4);
@@ -67,6 +68,8 @@ $location-standard-ordinal-dimensions: calc(var(--hh-location-standard-base-spac
   &-distance
   {
     font-style: italic;
+    white-space: nowrap;
+    padding-left: 4px;
   }
 
   &-subtitle
